versioned_docs/version-2.16/reference/goals/lint.mdx
---
title: lint
description: |
  Run linters/formatters/fixers in check mode.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants lint [args]
```

Run linters/formatters/fixers in check mode.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[lint]`</span>

<span className={styles.options}>

## Basic options

### `only`

<Option
  cli_repr={`--lint-only="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LINT_ONLY'
  toml_repr={`[lint]
only = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Only run these linters and skip all others.

The linter names are outputted at the final summary of running this goal, e.g. `flake8` and `shellcheck`. You can also run `lint --only=fake` to get a list of all activated linters.

You can repeat this option, e.g. `lint --only=flake8 --only=shellcheck` or `lint --only=['flake8', 'shellcheck']`.

</Option>

### `skip_fixers`

<Option
  cli_repr={`--[no-]lint-skip-fixers`}
  env_repr='PANTS_LINT_SKIP_FIXERS'
  toml_repr={`[lint]
skip_fixers = <bool>`}
  default_repr={`False`}
>

If true, skip running all fixers in check-only mode.

FYI: when running `pants fix lint ::`, there should be diminishing performance benefit to using this flag. Pants attempts to reuse the results from `fix` when running `lint` where possible.

</Option>

### `skip_formatters`

<Option
  cli_repr={`--[no-]lint-skip-formatters`}
  env_repr='PANTS_LINT_SKIP_FORMATTERS'
  toml_repr={`[lint]
skip_formatters = <bool>`}
  default_repr={`False`}
>

If true, skip running all formatters in check-only mode.

FYI: when running `pants fmt lint ::`, there should be diminishing performance benefit to using this flag. Pants attempts to reuse the results from `fmt` when running `lint` where possible.

</Option>

## Advanced options

### `batch_size`

<Option
  cli_repr={`--lint-batch-size=<int>`}
  env_repr='PANTS_LINT_BATCH_SIZE'
  toml_repr={`[lint]
batch_size = <int>`}
  default_repr={`128`}
>

The target number of files to be included in each linter batch.

Linter processes are batched for a few reasons:

```
1. to avoid OS argument length limits (in processes which don't support argument files)
2. to support more stable cache keys than would be possible if all files were operated on in a single batch.
3. to allow for parallelism in linter processes which don't have internal parallelism, or -- if they do support internal parallelism -- to improve scheduling behavior when multiple processes are competing for cores and so internal parallelism cannot be used perfectly.
```

In order to improve cache hit rates (see 2.), batches are created at stable boundaries, and so this value is only a "target" batch size (rather than an exact value).

</Option>

## Deprecated options

None

## Related subsystems

- [environments-preview](../subsystems/environments-preview.mdx)
- [filter](../subsystems/filter.mdx)

</span>
